--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,5 @@
 .main-body {
-    background-color: rgb(185, 252, 185);
+    background-color: white;
     height: 100%;
     width: 100%;
     display: flex;
