--- a/src/assets/cards.css
+++ b/src/assets/cards.css
@@ -1,12 +1,12 @@
 .cards-container {
-    background-color: rgb(252, 239, 239);
-    height: 50%;
-    width: 50%;
+    background-color: rgb(185, 252, 185);
+    height: 60%;
+    width: 60%;
     min-height: 444px;
     min-width: 650px;
     box-shadow: 0px 0px 10px 5px lightgray;
     border-radius: 8px;
-    padding-top: 3rem;
+    padding-top: 2rem;
     margin: auto;
 }
 
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 33%;
+    text-align: center;
     font-size: x-large;
 }
 
@@ -28,7 +28,8 @@ p {
 }
 
 .cards-question {
-    font-size: large;
+    font-size: 24px;
+    font-weight: bold;
     text-align: center;
 }
 
@@ -52,15 +53,23 @@ p {
     border-radius: 6px;
     padding-top: 1%;
     border: 2px solid transparent;
+    position: relative;
 }
 
 .cards-choice:hover {
     cursor: pointer;
-    border: 2px solid  rgb(185, 252, 185)
+    border: 2px solid  gray
+}
+
+.cards-choice > .check-correct {
+    display: none;
+    position: absolute;
+    left: 3%;
 }
 
 .selected {
-    background-color: rgb(185, 252, 185);
+    background-color: rgb(252, 239, 239);
+    border: 2px solid gray;
     width: 50%;
     height: 15%;
     /* z-index: 5; */
@@ -68,7 +77,7 @@ p {
 
 .cards-submit-button {
     width: 100px;
-    height: 25px;
+    height: 40px;
     background-color: white;
     border-radius: 8px;
     cursor: pointer;
@@ -81,7 +90,7 @@ p {
 }
 
 .cards-submit-button:hover {
-    background-color:  rgb(185, 252, 185);
+    background-color:  rgb(252, 239, 239);
     border-radius: 8px;
     cursor: pointer;
     outline: none;
@@ -98,16 +107,23 @@ p {
     position: relative;
 }
 
+.score-count-container {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    margin: auto;
+    justify-content: space-between;
+    margin-bottom: 2%;
+}
+
 .display-score {
-    position: absolute;
-    bottom: 0;
-    right: 10%;
+    font-size: 26px;
+    font-weight: bolder;
 }
 
 .display-num-of-questions {
-    position: absolute;
-    bottom: 0;
-    left: 10%;
+    font-size: 26px;
+    font-weight: bolder;
 }
 
 button:disabled {
