--- a/src/assets/cards.css
+++ b/src/assets/cards.css
@@ -46,12 +46,11 @@ p {
     /* margin: auto; */
     cursor: pointer;
     background-color: white;
-    height: 15%;
+    height: 17%;
     margin: auto;
     width: 50%;
     text-align: center;
     border-radius: 6px;
-    padding-top: 1%;
     border: 2px solid transparent;
     position: relative;
     outline: none;
@@ -68,6 +67,7 @@ p {
     position: absolute;
     color: green;
     left: 3%;
+    top: 20%;
 }
 
 .cards-choice > .incorrect-answer {
@@ -75,6 +75,7 @@ p {
     position: absolute;
     color: red;
     left: 3%;
+    top: 20%;
 }
 
 /* .cards-choice > i {
@@ -87,7 +88,11 @@ p {
     background-color: rgb(252, 239, 239);
     border: 2px solid gray;
     width: 50%;
-    height: 15%;
+    height: 17%;
+}
+
+button:disabled > .selected {
+    border: 2px solid gray;
 }
 
 .cards-submit-button {
@@ -143,13 +148,13 @@ p {
 
 button:disabled {
     border: none;
-    color: lightgray;
+    color: black;
 }
 
 button:disabled:hover {
     border: none;
     background-color: white;
-    color: lightgray;
+    color: black;
 }
 
 .cards-play-again-button {
